[package]
authors = ["Luke Frisken <l.frisken@gmail.com>"]
categories = ["gui"]
description = "A library for validating forms, and allowing validation logic to be shared."
edition = "2018"
keywords = ["validation", "forms"]
license = "MIT"
name = "form-validation"
readme = "README.md"
repository = "https://github.com/kellpossible/form-validation"
version = "0.3.1"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
wasm-bindgen = { version = "0.2", optional = true }
serde = "1.0.136"
stdweb = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
serde_json = "1.0.59"

[features]
default = []
wasm-bindgen-support = ["wasm-bindgen", "uuid/wasm-bindgen"]
stdweb-support = ["stdweb", "uuid/stdweb"]
async = ["futures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]